# InteropUnityCUDA

./: .gitignore  .gitmodules
InteropUnityCUDA/Assets/: OptixInterop.cs  Test.cs  cubeTargetShader.shader
InteropUnityCUDA/Assets/Actions/: ActionUnitySampleTexture.cs  ActionUnitySampleTextureArray.cs  InteropHandler.cs  InteropHandlerSample.cs
InteropUnityCUDA/Assets/Editor/: XRInfoProviderEditor.cs
InteropUnityCUDA/Assets/FreeFlyCamera/Demo/Materials/: Material3.mat
InteropUnityCUDA/Assets/FreeFlyCamera/Demo/Scenes/: Demo.unity
InteropUnityCUDA/Assets/OptixAction/: OptixAction.cs  OptixInterop.cs  OptixSourceVolumeActions.cs  OptixVolumeInterop.cs  cubeTargetMaterial.mat  cubeTargetShader.shader
InteropUnityCUDA/Assets/Plugin/: OptixActions.lib  OptixSourceVolumeActions.lib  PluginInteropUnityCUDA.lib  SampleBasic.lib  Utilities.lib
InteropUnityCUDA/Assets/Scenes/: Bla.unity  CudaSample.unity
InteropUnityCUDA/Assets/Scripts/: ActionUnityTestOptixOwl.cs  SourceLoader.cs  XRInfoProvider.cs
InteropUnityCUDA/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
InteropUnityCUDA/Assets/XR/Settings/: OpenXR Package Settings.asset
InteropUnityCUDA/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Plugin/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Folder.DotSettings  team-shared.DotSettings  vcpkg.json
Plugin/OptixAction/: CMakeLists.txt
Plugin/OptixAction/src/: deviceCode.cu  source_volume_loader.cpp  volume_renderer_test.h
Plugin/OptixActions/: CMakeLists.txt
Plugin/OptixActions/include/: action_source_volume_test.h  action_test_optix_owl.h  source_volume_loader.h
Plugin/OptixActions/src/: action_source_volume_test.cpp  action_test_optix_owl.cpp  deviceCode.h  source_volume_renderer_test.cpp  volume_renderer_test.cpp
Plugin/PluginInteropUnityCUDA/: CMakeLists.txt
Plugin/PluginInteropUnityCUDA/include/: d3d11_include.h  openGL_include.h  unity_plugin.h
Plugin/PluginInteropUnityCUDA/include/Buffer/: vertex_buffer_D3D11.h
Plugin/PluginInteropUnityCUDA/include/RenderAPI/: renderAPI_OpenGLCoreES.h
Plugin/PluginInteropUnityCUDA/include/Texture/: texture.h  texture_D3D11.h
Plugin/PluginInteropUnityCUDA/src/: factory.cpp  unity_plugin.cpp
Plugin/PluginInteropUnityCUDA/src/Buffer/: vertex_buffer_D3D11.cpp
Plugin/PluginInteropUnityCUDA/src/RenderAPI/: renderAPI_D3D11.cpp
Plugin/PluginInteropUnityCUDA/src/Texture/: texture.cpp  texture_D3D11.cpp
Plugin/SampleBasic/: CMakeLists.txt
Plugin/SampleBasic/src/: action_sample_texture_array.cpp
Plugin/Utilities/: CMakeLists.txt
Plugin/Utilities/include/: framework.h
